<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F2F2F2"
              android:orientation="vertical" >

    <include layout="@layout/header_title_model1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="6dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:text="@string/need_info"
             android:textSize="14sp" />
         <RelativeLayout
             android:id="@+id/rl_type_demand"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white" >

             <TextView
                 android:id="@+id/tv_type1_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="类型"
                 android:textSize="13sp" />

             <TextView
                 android:id="@+id/tv_type_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/tv_type1_demand"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/choose_type"
                 android:textSize="13sp" >
             </TextView>

             <CheckBox
                 android:id="@+id/cb_type_demand"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/selector_addcust_sanjiao"
                 android:button="@null"
                 android:checked="true"
                 android:enabled="false"
                 />
         </RelativeLayout>

         <LinearLayout
             android:id="@+id/ll_type_demand"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="#FFFFFF"
             android:orientation="vertical">
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="#D1D1D1" />

             <RelativeLayout
                 android:id="@+id/rl_zu_demand"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:paddingLeft="20dp" >

                 <ImageView
                     android:id="@+id/iv_zu_demand"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:layout_centerVertical="true"
                     android:background="@drawable/c_manage_button_unselected" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@+id/iv_zu_demand"
                     android:gravity="center_vertical"
                     android:text="@string/seek_house"
                     android:textColor="#9E9E9E"
                     android:textSize="13sp" />
             </RelativeLayout>

             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_marginLeft="20dp"
                 android:background="#D1D1D1" />

             <RelativeLayout
                 android:id="@+id/rl_gou_demand"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:paddingLeft="20dp" >

                 <ImageView
                     android:id="@+id/iv_gou_demand"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:layout_centerVertical="true"
                     android:background="@drawable/c_manage_button_unselected" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@+id/iv_gou_demand"
                     android:gravity="center_vertical"
                     android:text="@string/seek_buy"
                     android:textColor="#9E9E9E"
                     android:textSize="13sp" />
             </RelativeLayout>
         </LinearLayout>

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="6dp"
             android:background="#D1D1D1" />
         <RelativeLayout
             android:id="@+id/rl_fangxing_demand"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white" >

             <TextView
                 android:id="@+id/fangxing_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="@string/fangxing"
                 android:textSize="13sp" />

             <TextView
                 android:id="@+id/tv_fangxing_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/fangxing_demand"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/choose_fangxing"
                 android:textSize="13sp" >
             </TextView>

             <CheckBox
                 android:id="@+id/cb_fangxing_demand"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/selector_addcust_sanjiao"
                 android:button="@null"
                 android:enabled="false"
                 />
         </RelativeLayout>

             <include
                 android:id="@+id/il_fangxing_demand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 layout="@layout/model_wheel_view_two" />


         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="6dp"
             android:background="#D1D1D1" />

         <RelativeLayout
             android:id="@+id/rl_place_demand"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white" >

             <TextView
                 android:id="@+id/tv_place_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="@string/area"
                 android:textSize="13sp" />

             <TextView
                 android:id="@+id/tv_changePlace_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/tv_place_demand"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/choose_area"
                 android:textSize="13sp" >
             </TextView>

             <CheckBox
                 android:id="@+id/cb_place_demand"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/selector_addcust_sanjiao"
                 android:button="@null"
                 android:enabled="false"
                 />
         </RelativeLayout>
         <include
             android:id="@+id/il_place_demand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/model_wheel_view_one" />
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="6dp"
             android:background="#D1D1D1" />

         <RelativeLayout
             android:id="@+id/rl_pianqu_demand"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white" >

             <TextView
                 android:id="@+id/tv_pianqu_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="片区"
                 android:textSize="13sp" />

             <TextView
                 android:id="@+id/tv_changePianqu_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/tv_pianqu_demand"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/choose_pianqu"
                 android:textSize="13sp" >
             </TextView>

             <CheckBox
                 android:id="@+id/cb_pianqu_demand"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/selector_addcust_sanjiao"
                 android:button="@null"
                 android:enabled="false"
                 />
         </RelativeLayout>
         <include
             android:id="@+id/il_pianqu_demand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/model_wheel_view_one" />
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="6dp"
             android:background="#D1D1D1" />

         <RelativeLayout
             android:id="@+id/rl_area_demand"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white" >

             <TextView
                 android:id="@+id/tv_area_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="@string/mianji"
                 android:textSize="13sp" />

             <TextView
                 android:id="@+id/tv_changeArea_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/tv_area_demand"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/choose_mianji"
                 android:textSize="13sp" >
             </TextView>

             <CheckBox
                 android:id="@+id/cb_area_demand"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/selector_addcust_sanjiao"
                 android:button="@null"
                 android:enabled="false"
                 />
         </RelativeLayout>

         <include
             android:id="@+id/il_area_demand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/model_wheel_view_two" />
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="6dp"
             android:background="#D1D1D1" />

         <RelativeLayout
             android:id="@+id/rl_price_demand"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white" >

             <TextView
                 android:id="@+id/tv_price_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="@string/price"
                 android:textSize="13sp" />

             <TextView
                 android:id="@+id/tv_changePrice_demand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/tv_price_demand"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/choose_price"
                 android:textSize="13sp" >
             </TextView>

             <CheckBox
                 android:id="@+id/cb_price_demand"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/selector_addcust_sanjiao"
                 android:button="@null"
                 android:enabled="false"
                 />
         </RelativeLayout>
         <include
             android:id="@+id/il_price_demand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/model_wheel_view_two" />
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="6dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:text="@string/other_info"
             android:textSize="14sp" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:focusable="true"
             android:focusableInTouchMode="true"
             >
             <EditText
                 android:id="@+id/et_otherInfo_demand"
                 android:layout_width="match_parent"
                 android:minHeight="40dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:maxHeight="100dp"
                 android:maxLength="500"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center_vertical"
                 android:hint="@string/input_other_info"
                 android:paddingLeft="15dp"
                 android:textSize="13sp" >
             </EditText>
         </RelativeLayout>

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#D1D1D1" />
     </LinearLayout>
    </ScrollView>
</LinearLayout>